--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,7 +25,26 @@
     </article>
   </section>
 
-  <section>
-    <%= svg_tag "icons/Pet.svg", style: "color: red; background-color: green;" %>
+  <section style="background-color: #f7f7f7;">
+    <div style="max-width: 1300px; margin: 0 auto; padding: 6.25rem 0;">
+
+      <h3 style="text-align: center;font-family: var(--family-baloo);">Confira nossa opções de Categorias</h3>
+
+
+      <div style="display: flex; align-items: center; justify-content: space-evenly;">
+        <div style="border-radius: 50%; padding: 15px; background-color: green;width:fit-content;">
+          <%= svg_tag "pictures/categories/dog.svg", style: "color: red; font-size: 6rem;" %>
+        </div>
+        <div style="border-radius: 50%; padding: 15px; background-color: green;width:fit-content;">
+          <%= svg_tag "pictures/categories/cat.svg", style: "color: red; font-size: 6rem;" %>
+        </div>
+        <div style="border-radius: 50%; padding: 15px; background-color: green;width:fit-content;">
+          <%= svg_tag "pictures/categories/bag-shop.svg", style: "color: red; font-size: 6rem;" %>
+        </div>
+        <div style="border-radius: 50%; padding: 15px; background-color: green;width:fit-content;">
+          <%= svg_tag "pictures/categories/bath-shower.svg", style: "color: red; font-size: 6rem;" %>
+        </div>
+      </div>
+    </div>
   </section>
 </main>
