--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -71,6 +71,10 @@ a {
   text-decoration: none;
 }
 
+body {
+  background-color: var(--text-white);
+}
+
 .flex-center-between {
   display: flex;
   align-items: center;
