--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -41,6 +41,13 @@ header .header__container {
   border-radius: var(--border-radius-small);
 }
 
+.header__nav ul li a.header-btn-shop {
+  background-color: var(--primary);
+  color: white;
+  padding: 0.4rem 1rem;
+  border-radius: var(--border-radius-small);
+}
+
 .header-favorite__container, .header-cart__container {
   position: relative;
 
