--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,6 +36,7 @@
   --font-size-xxxlarge: 6.4rem;
 
   --font-weight-regular: 400;
+  --font-weight-medium: 500;
   --font-weight-semibold: 600;
   --font-weight-black: 900;
 
@@ -61,6 +62,10 @@
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 ul {
