--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
 
           <h3 class="sub-title">dê a ele o tratamento que ele merece.</h3>
 
-          <h3 class="sub-title" style="margin-top: 60px;">
+          <h3 class="sub-title" style="margin-top: 15vh;">
             O seu aumiguinho terá tratamento
             <strong class="vip-text">VIP</strong>
           </h3>
@@ -25,25 +25,40 @@
     </article>
   </section>
 
-  <section style="background-color: #f7f7f7;">
-    <div style="max-width: 1300px; margin: 0 auto; padding: 6.25rem 0;">
+  <section class="products-section">
+    <div>
 
-      <h3 style="text-align: center;font-family: var(--family-baloo);">Confira nossa opções de Categorias</h3>
+      <h3>Confira nossa opções de Categorias</h3>
 
 
-      <div style="display: flex; align-items: center; justify-content: space-evenly;">
-        <div style="border-radius: 50%; padding: 15px; background-color: green;width:fit-content;">
-          <%= svg_tag "pictures/categories/dog.svg", style: "color: red; font-size: 6rem;" %>
-        </div>
-        <div style="border-radius: 50%; padding: 15px; background-color: green;width:fit-content;">
-          <%= svg_tag "pictures/categories/cat.svg", style: "color: red; font-size: 6rem;" %>
-        </div>
-        <div style="border-radius: 50%; padding: 15px; background-color: green;width:fit-content;">
-          <%= svg_tag "pictures/categories/bag-shop.svg", style: "color: red; font-size: 6rem;" %>
-        </div>
-        <div style="border-radius: 50%; padding: 15px; background-color: green;width:fit-content;">
-          <%= svg_tag "pictures/categories/bath-shower.svg", style: "color: red; font-size: 6rem;" %>
-        </div>
+      <div class="product-categories__container">
+        <a href="#">
+          <div class="product-category__item">
+            <%= svg_tag "pictures/categories/dog.svg", class: "products-category__icon" %>
+          </div>
+          <h3>Cães</h3>
+        </a>
+
+        <a href="#">
+          <div class="product-category__item">
+            <%= svg_tag "pictures/categories/cat.svg", class: "products-category__icon" %>
+          </div>
+          <h3>Gatos</h3>
+        </a>
+
+        <a href="#">
+          <div class="product-category__item">
+            <%= svg_tag "pictures/categories/bag-shop.svg", class: "products-category__icon" %>
+          </div>
+          <h3>Rações</h3>
+        </a>
+
+        <a href="#">
+          <div class="product-category__item">
+            <%= svg_tag "pictures/categories/bath-shower.svg", class: "products-category__icon" %>
+          </div>
+          <h3>Banho e Tosa</h3>
+        </a>
       </div>
     </div>
   </section>
