--- a/app/views/patient_area/index.html.erb
+++ b/app/views/patient_area/index.html.erb
@@ -1,6 +1,10 @@
 <h1>PatientArea#index</h1>
 <p>Find me in app/views/patient_area/index.html.erb</p>
 
+<% if notice %>
+	<p><%= notice %></p>
+<% end %>
+
 <% if current_user %>
 	<p>Looged in as <%= current_user.email %></p>
 	<%= link_to "Logout", destroy_user_session_path, data: {turbo_method: :delete} %>
