--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,10 +16,14 @@
 
 :root {
   --primary: #ffae00;
+  --primary-light: #ffcf40;
   --secondary: #03989e;
+  --white: #ffffff;
   --text-dark: #383838;
+  --text-grey-dark: #3A4050;
   --text-white: #f7f7f7;
   --gray-light: #f8f9fa;
+  --grey-input: #eaf1f7;
   --gray-border-light: #e9ecef;
   --danger-red: #dc3545;
 
@@ -27,6 +31,7 @@
   --family-instrument: "Instrument Sans", serif;
   --family-baloo: "Baloo 2", sans-serif;
 
+  --font-size-xxsmall: 1rem;
   --font-size-small: 1.2rem;
   --font-size-medium: 1.5rem;
   --font-size-mid-lg: 2rem;
@@ -80,8 +85,63 @@ body {
   background-color: var(--text-white);
 }
 
+abbr[title="required"] {
+  display: none;
+}
+
 .flex-center-between {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.notice-notification {
+  color: #ffffff;
+  background-color: #a1d360;
+  padding: 10px 20px;
+  border-radius: 4px;
+  position: fixed;
+  right: 1rem;
+  top: 1rem;
+  z-index: 2;
+  transition: 0.6s ease;
+}
+
+.alert-notification {
+  color: white;
+  background-color: #ff0000;
+  padding: 10px 20px;
+  border-radius: 4px;
+  position: fixed;
+  right: 1rem;
+  top: 1rem;
+  z-index: 2;
+  transition: 0.6s ease;
+}
+
+.animation-slide-in-right {
+  animation: slideInFromRight 0.6s ease forwards;
+}
+
+/* Animação de saída */
+.animation-slide-out-right {
+  animation: slideOutToRight 0.6s ease forwards;
+}
+
+@keyframes slideInFromRight {
+  from {
+    transform: translateX(120%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideOutToRight {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(120%);
+  }
 }
