--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,6 +4,11 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <%= f.input :nome,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "nome" } %>
+
     <%= f.input :email, required: true, autofocus: true %>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -21,6 +26,17 @@
                 hint: "we need your current password to confirm your changes",
                 required: true,
                 input_html: { autocomplete: "current-password" } %>
+
+    <%= f.input :telefone,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "telefone" } %>
+
+    <div class="field">
+      <%= f.label :role %><br />
+      <%= f.select :role, User.roles.keys.map { |role| [role.titleize, role] } %>
+    </div>
+    <br />
   </div>
 
   <div class="form-actions">
