--- a/app/views/home/_main_section.html.erb
+++ b/app/views/home/_main_section.html.erb
@@ -1,12 +1,12 @@
 <section class="main-section">
   <article>
-    <%= image_tag("icons/petshop-logo.svg", class: "petshop-logo") %>
+    <%= image_tag("icons/home/petshop-logo.svg", class: "petshop-logo") %>
 
     <div class="content-container flex-center-between">
       <div>
         <h2 class="main-title-bold">
           TRAGA SEU
-          <%= svg_tag "icons/Pet.svg", class: "pet-icon" %>
+          <%= svg_tag "icons/home/Pet.svg", class: "pet-icon" %>
         </h2>
 
         <h3 class="sub-title">dê a ele o tratamento que ele merece.</h3>
@@ -18,7 +18,7 @@
       </div>
 
       <div style="margin-top: auto;">
-        <%= image_tag("pictures/dog-cat.jpg", class: "dog-picture") %>
+        <%= image_tag("pictures/home/dog-cat.jpg", class: "dog-picture") %>
       </div>
     </div>
   </article>
