feat: implemented mailtrap and it's working

--- a/app/views/users/mailer/reset_password_instructions.html.erb
+++ b/app/views/users/mailer/reset_password_instructions.html.erb
@@ -1,10 +1,4 @@
-<style>
-  * {
-    font-family: sans-serif;
-  }
-</style>
-
-<p>Olá, usuário do email: <strong><%= @resource.email %>!</strong></p>
+<p>Olá, usuário do email: <%= @resource.email %>!</p>
 
 <p>Alguém requisitou um link para alterar sua senha. Você pode fazer isso através do link abaixo.</p>
 
