--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -56,7 +56,7 @@
         </div>
 
         <div class="form-actions">
-          <%= f.submit "Sign up", class: "button-submit" %>
+          <%= f.submit "Cadastrar", class: "button-submit" %>
         </div>
       <% end %>
     </div>
