--- a/app/views/footer/_footer.html.erb
+++ b/app/views/footer/_footer.html.erb
@@ -1,1 +1,85 @@
-<div>footer</div>
+<footer>
+  <section class="section-footer-highlight">
+    <div class="footer-highlight-layout">
+        <article>
+          <span>Horário de funcionamento</span>
+            <p>
+              De segunda à sexta-feira<br />
+              das 08h às 18h
+            </p>
+        </article>
+
+        <article>
+          <span>Entre em contato</span>
+            <p>
+              Telefone: (82) 99999-0000<br />
+              <a>WhatsApp: (82) 99999-0000</a>
+              <br />
+              sac.petshopmanager@petshopmanager.com.br
+            </p>
+        </article>
+
+        <article>
+          <span>Endereço</span>
+            <p>
+              R. Floriano Rosa - Dom Constantino<br />
+              Penedo - AL
+            </p>
+        </article>
+
+        <article>
+          <span>Nossas Redes Sociais</span>
+            <p>
+              <i class="fa fa-facebook-official" aria-hidden="true"></i>
+              <i class="fa fa-instagram" aria-hidden="true"></i>
+              <i class="fa fa-twitter" aria-hidden="true"></i>
+            </p>
+        </article>
+    </div>
+  </section>
+
+  <section class="section-footer-bottom">
+    <div class="footer-bottom-layout">
+      <article>
+        <span>INFORMAÇÕES</span>
+        <ul>
+          <li><a href="#">Sobre nós</a></li>
+          <li><a href="#">Central de Atendimento</a></li>
+          <li><a href="#">Serviços</a></li>
+          <li><a href="#">Contato</a></li>
+          <li><a href="#">Dúvidas Frequentes</a></li>
+        </ul>
+      </article>
+      <article>
+        <span>ACESSO RÁPIDO</span>
+        <ul>
+          <li><a href="#">Login</a></li>
+          <li><a href="#">Cadastro</a></li>
+          <li><a href="#">Recuperar Senha</a></li>
+        </ul>
+      </article>
+      <article>
+        <span>POLÍTICAS</span>
+        <ul>
+          <li><a href="#">Entregas</a></li>
+          <li><a href="#">Política de Privacidade</a></li>
+          <li><a href="#">Termos de Uso</a></li>
+          <li><a href="#">Formas de Pagamento</a></li>
+        </ul>
+      </article>
+      <article>
+        <span>AJUDA</span>
+        <ul>
+          <li><a href="#">Fale Conosco</a></li>
+          <li><a href="#">Trocas e Devoluções</a></li>
+          <li><a href="#">Garantia</a></li>
+          <li><a href="#">FAQ</a></li>
+        </ul>
+      </article>
+    </div>
+
+    <p style="text-align: center;padding: 1rem 0;font-weight: 500;margin-top: 2rem;">
+      Copyright © <%= Date.today.year %> PetShop Manager. Todos os direitos reservados.
+    </p>
+  </section>
+</footer>
