--- a/app/views/home/_bestseller_section.html.erb
+++ b/app/views/home/_bestseller_section.html.erb
@@ -2,5 +2,19 @@
   <div>
     <h3 class="main-title-section">Mais Vendidos</h3>
 
+    <div style="display: flex; justify-content: space-between;margin-top: 2rem;">
+      <article>
+        <%= image_tag "pictures/bestsellers/product1.webp", style: "width: 200px;"%>
+      </article>
+      <article>
+        <%= image_tag "pictures/bestsellers/product2.webp", style: "width: 200px;"%>
+      </article>
+      <article>
+        <%= image_tag "pictures/bestsellers/product3.webp", style: "width: 200px;"%>
+      </article>
+      <article>
+        <%= image_tag "pictures/bestsellers/product4.webp", style: "width: 200px;"%>
+      </article>
+    </div>
   </div>
 </section>
