--- a/app/views/header/_header.html.erb
+++ b/app/views/header/_header.html.erb
@@ -21,13 +21,13 @@
           <%= link_to "Area do paciente", patient_area_path, class: "header-btn-highlight" %>
         </li>
         <li>
-          <%= link_to (about_us_path), class: "header-favorite__container" do %>
+          <%= link_to (favorite_index_path), class: "header-favorite__container" do %>
             <i class="fa fa-heart" aria-hidden="true"></i>
             <span class="badge-favorite">1</span>
           <% end%>
         </li>
         <li>
-          <%= link_to (about_us_path), class: "header-cart__container" do %>
+          <%= link_to (cart_index_path), class: "header-cart__container" do %>
             <i class="fa fa-shopping-cart" aria-hidden="true"></i>
             <span class="badge-cart">2</span>
           <% end%>
