--- a/app/views/patient_area/index.html.erb
+++ b/app/views/patient_area/index.html.erb
@@ -1,25 +1,27 @@
-<h1>PatientArea#index</h1>
-<p>Find me in app/views/patient_area/index.html.erb</p>
+<div style="width: 1300px; margin: 0 auto;">
+	<h1>PatientArea#index</h1>
+	<p>Find me in app/views/patient_area/index.html.erb</p>
 
-<% if notice %>
-	<p><%= notice %></p>
-<% end %>
+	<% if notice %>
+		<p><%= notice %></p>
+	<% end %>
 
-<% if current_user %>
-	<p>Looged in as <%= current_user.email %></p>
-	<%= link_to "Logout", destroy_user_session_path, data: {turbo_method: :delete} %>
-<% else %>
-	<%= link_to "Login", new_user_session_path %>
-	<%= link_to "Sign up", new_user_registration_path %>
-<% end %>
+	<% if current_user %>
+		<p>Looged in as <%= current_user.email %></p>
+		<%= link_to "Logout", destroy_user_session_path, data: {turbo_method: :delete} %>
+	<% else %>
+		<%= link_to "Login", new_user_session_path %>
+		<%= link_to "Sign up", new_user_registration_path %>
+	<% end %>
 
-<% if user_signed_in? %>
- <div> Welcome <%= current_user.email %> </div>
-  <%= button_to "Sign out", destroy_user_session_path, method: :delete %>
-  <%= link_to "Edit", edit_user_registration_path %>
-<% else %>
-  <%= button_to "Sign in", new_user_session_path %>
-<% end %>
-<h1>Hello DigitalOcean!</h1>
+	<% if user_signed_in? %>
+	 <div> Welcome <%= current_user.email %> </div>
+		<%= button_to "Sair", destroy_user_session_path, method: :delete %>
+		<%= link_to "Editar Perfil", edit_user_registration_path %>
+	<% else %>
+		<%= button_to "Sign in", new_user_session_path %>
+	<% end %>
+	<h1>Hello DigitalOcean!</h1>
 
-<%= link_to "Criar animal", new_animal_path %>
+	<%= link_to "Criar animal", new_animal_path %>
+</div>
