--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,5 @@
-<h2>Esqueceu sua senha?</h2>
+<div style="width: 1300px; margin: 0 auto;">
+  <h2>Esqueceu sua senha?</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= f.error_notification %>
@@ -16,3 +17,5 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+</div>
