--- a/app/views/home/_bestseller_section.html.erb
+++ b/app/views/home/_bestseller_section.html.erb
@@ -2,18 +2,44 @@
   <div>
     <h3 class="main-title-section">Mais Vendidos</h3>
 
-    <div style="display: flex; justify-content: space-between;margin-top: 2rem;">
+    <div
+      class="cards-container"
+    >
       <article>
-        <%= image_tag "pictures/bestsellers/product1.webp", style: "width: 200px;"%>
+        <div>
+          <%= image_tag "pictures/bestsellers/product1.webp", style: "width:250px;"%>
+        </div>
+        <div class="product-info-div">
+          <h3 class="product-name">Nome do Produto</h3>
+          <p class="product-value">R$ 100,00</p>
+        </div>
       </article>
       <article>
-        <%= image_tag "pictures/bestsellers/product2.webp", style: "width: 200px;"%>
+        <div>
+          <%= image_tag "pictures/bestsellers/product2.webp", style: "width:250px;"%>
+        </div>
+        <div class="product-info-div">
+          <h3 class="product-name">Nome do Produto</h3>
+          <p class="product-value">R$ 100,00</p>
+        </div>
       </article>
       <article>
-        <%= image_tag "pictures/bestsellers/product3.webp", style: "width: 200px;"%>
+        <div>
+          <%= image_tag "pictures/bestsellers/product3.webp", style: "width:250px;"%>
+        </div>
+        <div class="product-info-div">
+          <h3 class="product-name">Nome do Produto</h3>
+          <p class="product-value">R$ 100,00</p>
+        </div>
       </article>
       <article>
-        <%= image_tag "pictures/bestsellers/product4.webp", style: "width: 200px;"%>
+        <div>
+          <%= image_tag "pictures/bestsellers/product4.webp", style: "width:250px;"%>
+        </div>
+        <div class="product-info-div">
+          <h3 class="product-name">Nome do Produto</h3>
+          <p class="product-value">R$ 100,00</p>
+        </div>
       </article>
     </div>
   </div>
