--- a/app/views/about_us/index.html.erb
+++ b/app/views/about_us/index.html.erb
@@ -1,1 +1,54 @@
-<h1>About US</h1>
+<div style="margin: 0 auto; max-width: 1300px;margin-top: 2rem;">
+  <h1 style="margin: 1rem 0;">Quem somos</h1>
+
+  <ul>
+    <li style="margin-bottom: 1rem; display: flex; align-items: center;">
+      <div>
+        <img
+          src="https://cdn.discordapp.com/avatars/412463412954791938/71e51f8ac0bb596268ecb088ddae0140.webp?size=128"
+          style="height: 100px;width: 100px;border-radius: 50%;margin-right: 1rem;"
+        />
+      </div>
+      <p>
+        <strong>Everson Soares</strong> <br />
+        Graduando em Sistemas de Informação
+      </p>
+    </li>
+    <li style="margin-bottom: 1rem; display: flex; align-items: center;">
+      <div>
+        <img
+          src="https://media-gru1-2.cdn.whatsapp.net/v/t61.24694-24/427419289_769595014806470_71648108639642974_n.jpg?ccb=11-4&oh=01_Q5AaIHpelKZtopWjyRcPQBmn9664RqW0iQ3gsU2ye3I8uq6_&oe=673A247D&_nc_sid=5e03e0&_nc_cat=108"
+          style="height: 100px;width: 100px;border-radius: 50%;margin-right: 1rem;"
+        />
+      </div>
+      <p>
+        <strong>Vilker Silva</strong> <br />
+        Graduando em Sistemas de Informação
+      </p>
+    </li>
+    <li style="margin-bottom: 1rem; display: flex; align-items: center;">
+      <div>
+        <img
+          src="https://media-gru1-2.cdn.whatsapp.net/v/t61.24694-24/439331956_1876965692822102_6661622616933662747_n.jpg?ccb=11-4&oh=01_Q5AaIJ71eY3O1sECfDDZ1E8prE3V5731AzVl5m7JHcodkvse&oe=673A2F42&_nc_sid=5e03e0&_nc_cat=105"
+          style="height: 100px;width: 100px;border-radius: 50%;margin-right: 1rem;"
+        />
+      </div>
+      <p>
+        <strong>Fernando Sthewerson</strong> <br />
+        Graduando em Sistemas de Informação
+      </p>
+    </li>
+    <li style="margin-bottom: 1rem; display: flex; align-items: center;">
+      <div>
+        <img
+          src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_640.png"
+          style="height: 100px;width: 100px;border-radius: 50%;margin-right: 1rem;"
+        />
+      </div>
+      <p>
+        <strong>Lucas Araujo</strong> <br />
+        Graduando em Sistemas de Informação
+      </p>
+    </li>
+  </ul>
+</div>
