--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -1,1 +1,30 @@
-<h1>Contato</h1>
+<div style="margin: 0 auto; max-width: 1300px;margin-top: 2rem;">
+  <h1 style="margin: 1rem 0;">Contatos</h1>
+
+  <ul>
+    <li style="margin-bottom: 1rem;">
+      <p>
+        <strong>Everson Soares:</strong> <br />
+        everson.nascimento@arapiraca.ufal.br
+      </p>
+    </li>
+    <li style="margin-bottom: 1rem;">
+      <p>
+        <strong>Vilker Silva:</strong> <br />
+        vilker.santos@arapiraca.ufal.br
+      </p>
+    </li>
+    <li style="margin-bottom: 1rem;">
+      <p>
+        <strong>Fernando Sthewerson:</strong> <br />
+        fernando.rocha@im.ufal.br
+      </p>
+    </li>
+    <li style="margin-bottom: 1rem;">
+      <p>
+        <strong>Lucas Araujo:</strong> <br />
+        lucas.lisboa@arapiraca.ufal.br
+      </p>
+    </li>
+  </ul>
+</div>
