--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -5,4 +5,4 @@
 <p><strong>Peso:</strong> <%= @animal.peso %> kg</p>
 <p><strong>Dono:</strong> <%= @animal.cliente.nome %></p>
 
-<%= link_to 'Voltar', root_path %>
+<%= link_to 'Voltar', :back %>
