fix: url image path

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -3,7 +3,7 @@ main.home-container {
 }
 
 .main-section {
-  background-image: url("assets/icons/home/bottom-bg.svg");
+  background-image: url("icons/home/bottom-bg.svg");
   background-repeat: no-repeat;
   background-position: bottom right;
   background-size: 100%;
